Fix scrollbar, and some responsive

--- a/src/app.css
+++ b/src/app.css
@@ -5,3 +5,12 @@
 html {
 	scroll-behavior: smooth;
 }
+
+body {
+	overflow: auto;
+	scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+	display: none;
+}
